did some fixes to keep the text from jumping. Also adjusted the overlay

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -49,6 +49,7 @@ ul {
   text-transform: uppercase;
   width: 100%;
   position: relative;
+
 }
 
 #textWrapper .inset-text {
@@ -92,7 +93,7 @@ ul {
 #textWrapper .excerpt {
   color:var(--main-text-color);
   font: 400 18px/24px "gentium book basic";
-  padding: 0 50px;
+  padding: 0 60px;
   z-index: 10;
   margin: 0;
   text-align: justify;
@@ -144,17 +145,17 @@ ul {
   background-image: -webkit-radial-gradient(
     center top,
     ellipse farthest-corner,
-    var(--color-overlay-from),
-    var(--color-overlay-to)
+    rgba(255, 255, 255, 0.26) 10%,
+    rgba(255, 255, 255, 0) 100%
   );
 
   /* W3C Markup */
   background-image: radial-gradient(
     ellipse farthest-corner at center top,
-    var(--color-overlay-from),
-    var(--color-overlay-to)
+    rgba(255, 255, 255, 0.26) 10%,
+    rgba(255, 255, 255, 0) 100%
   );
-  z-index: 0;
+  z-index: 9 ;
 }
 
 /****** FOOTER *********/
@@ -248,11 +249,11 @@ footer ul li a:focus .fa-linkedin {
     margin: 40px;
     /* padding: 20px; */
     background-color: var(--wrapper-bg-color);
-    border: 30px solid var(--wrapper-bg-color);
+    border: 20px solid var(--wrapper-bg-color);
     -webkit-box-shadow: var(--wrapper-shadow-color);;
     -moz-box-shadow: var(--wrapper-shadow-color);;
     box-shadow: var(--wrapper-shadow-color);;
-    border-radius: 10px;
+    /* border-radius: 10px; */
   }
 
   .box {
@@ -271,6 +272,8 @@ footer ul li a:focus .fa-linkedin {
     grid-row: 1/3;
     align-items: center;
     justify-content: center;
+    align-self: center;
+    ;
   }
 
   .sidebar {
@@ -278,9 +281,9 @@ footer ul li a:focus .fa-linkedin {
     grid-column: 1 / 4;
     grid-row: 1/6;
     border-radius: 2px;
-    -webkit-box-shadow: inset var(--sidebar-shadow-color);;
-    -moz-box-shadow: inset var(--sidebar-shadow-color);;
-    box-shadow: inset var(--sidebar-shadow-color);;
+    -webkit-box-shadow: inset var(--sidebar-shadow-color);
+    -moz-box-shadow: inset var(--sidebar-shadow-color);
+    box-shadow: inset var(--sidebar-shadow-color);
   }
 
   .picture {
@@ -351,7 +354,7 @@ footer ul li a:focus .fa-linkedin {
 
   .header {
     grid-column: 1 / 5;
-    grid-row: 1/2;
+    /* grid-row: 1/2; */
   }
 
   .sidebar {
@@ -360,12 +363,12 @@ footer ul li a:focus .fa-linkedin {
 
   .textContainer {
     grid-column: 1 / 5;
-    grid-row: 2/5;
+    /* grid-row: 2/5; */
   }
 
   #textWrapper .excerpt {
     font: var(--main-text-small);
-    padding: 0 20px;
+    padding: 0 15px;
     
   }
 
@@ -384,19 +387,13 @@ footer ul li a:focus .fa-linkedin {
     font-style: italic;
   }
 
-  .header {
-    grid-row: 1/2;
-  }
-
   #textWrapper .excerpt {
     font: var(--main-text-small);
-    padding: 0 20px;
+    padding: 0 15px;
     
   }
 
-  .textContainer {
-    grid-row: 2/5;
-  }
+
 }
 @media (min-width: 1301px) and (max-width: 1430px) {
   #textWrapper .excerpt {
@@ -407,7 +404,7 @@ footer ul li a:focus .fa-linkedin {
     display: inline-block;
     background: var(--text-bg-color);
     /* color: #222; */
-    font: 800 48px/48px "open sans";
+    font: 800 58px/58px "open sans";
     text-align: center;
     text-transform: uppercase;
     width: 100%;
@@ -418,7 +415,7 @@ footer ul li a:focus .fa-linkedin {
   }
 
   #textWrapper h1 span {
-    font: 400 40px/40px "gentium book basic";
+    font: 400 48px/48px "gentium book basic";
     font-style: italic;
     text-transform: none;
   }
@@ -545,7 +542,6 @@ footer ul li a:focus .fa-linkedin {
     height: 50px;
     cursor: pointer;
     margin: 0 10px;
-    /* text-align: center; */
   }
 
 
